--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif
 }
 html{
     scroll-behavior: smooth;
@@ -46,7 +49,7 @@ html{
     color: white;
 }
 .nav-list li a:hover{
-    text-decoration: none;
+    text-decoration: underline;
     color: grey;
     
 }
@@ -94,9 +97,10 @@ html{
 }
 .text-big{
     font-size: 35px;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     margin: 5px 0;
     padding: 5px 0;
+    font-family: 'Roboto', sans-serif;
 }
 .text-small{
     font-size: 20px;
@@ -213,4 +217,9 @@ html{
 .social li a:hover{
     color: white;
     text-decoration: underline;
+}
+#about{
+    text-decoration: underline;
+    font-weight: bold;
+    font-size: 35px;
 }
