--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ html{
     font-family: sans-serif;
 }
 .footer{
-    background-color: gray;
+    background-color: rgb(97, 95, 95);
 }
 .last{
     text-align: center;
